Dinning Room Completo con llamados segun angular

--- a/BackEndComedores/Web.config
+++ b/BackEndComedores/Web.config
@@ -81,6 +81,6 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="ProyectoMaestriaEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4J06KC9\LOCALHOST;initial catalog=Comedores;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ProyectoMaestriaEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-K1RILPS;initial catalog=Comedores;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
