--- a/BackEndComedores/BackEndComedores.csproj
+++ b/BackEndComedores/BackEndComedores.csproj
@@ -186,7 +186,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\ControladoresPrincipales\ComedorController.cs" />
+    <Compile Include="Controllers\ControladoresPrincipales\DiningRoomController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\IngredientController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\RecipeController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\SystemUserController.cs" />
