--- a/BackEndComedores/BackEndComedores.csproj
+++ b/BackEndComedores/BackEndComedores.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\DiningRoomController.cs" />
+    <Compile Include="Controllers\ControladoresPrincipales\DisponibilityController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\IngredientController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\RecipeController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\SystemUserController.cs" />
@@ -200,6 +201,7 @@
     <Compile Include="Controllers\ControladoresPrincipales\TransportController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="DataACCESS\ComedorDAL.cs" />
+    <Compile Include="DataACCESS\DisponibilityDAL.cs" />
     <Compile Include="DataACCESS\IngredientDAL.cs" />
     <Compile Include="DataACCESS\LoginDAL.cs" />
     <Compile Include="DataACCESS\ProductDAL.cs" />
@@ -215,6 +217,7 @@
     </Compile>
     <Compile Include="Entidades\CompleteRecipeReturnEntity.cs" />
     <Compile Include="Entidades\CompleteVerificationUserEntity.cs" />
+    <Compile Include="Entidades\DisponibilityReturnEntity.cs" />
     <Compile Include="Entidades\IngredientReturnEntity.cs" />
     <Compile Include="Entidades\IngredientWithoutRecipeEntity.cs" />
     <Compile Include="Entidades\SystemUserReturnEntity.cs" />
@@ -226,6 +229,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Logic\ComedorBL.cs" />
+    <Compile Include="Logic\DisponibilityBL.cs" />
     <Compile Include="Logic\IngredientBL.cs" />
     <Compile Include="Logic\LogicBL.cs" />
     <Compile Include="Logic\LoginBL.cs" />
