--- a/BackEndComedores/BackEndComedores.csproj
+++ b/BackEndComedores/BackEndComedores.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Controllers\ControladoresPrincipales\DiningRoomController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\DisponibilityController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\IngredientController.cs" />
+    <Compile Include="Controllers\ControladoresPrincipales\PreOrderController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\RecipeController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\SystemUserController.cs" />
     <Compile Include="Controllers\Seguridad\HomeController.cs" />
@@ -204,6 +205,8 @@
     <Compile Include="DataACCESS\DisponibilityDAL.cs" />
     <Compile Include="DataACCESS\IngredientDAL.cs" />
     <Compile Include="DataACCESS\LoginDAL.cs" />
+    <Compile Include="DataACCESS\PreOrderDAL.cs" />
+    <Compile Include="DataACCESS\PreOrerItemDAL.cs" />
     <Compile Include="DataACCESS\ProductDAL.cs" />
     <Compile Include="DataACCESS\ProviderDAL.cs" />
     <Compile Include="DataACCESS\RecipeDAL.cs" />
@@ -220,6 +223,8 @@
     <Compile Include="Entidades\DisponibilityReturnEntity.cs" />
     <Compile Include="Entidades\IngredientReturnEntity.cs" />
     <Compile Include="Entidades\IngredientWithoutRecipeEntity.cs" />
+    <Compile Include="Entidades\PreOrderReturnEntity.cs" />
+    <Compile Include="Entidades\ProductReturnEntity.cs" />
     <Compile Include="Entidades\RecipeProductModelEntity.cs" />
     <Compile Include="Entidades\SystemUserReturnEntity.cs" />
     <Compile Include="Entidades\TransportReturnEntity.cs" />
@@ -234,6 +239,8 @@
     <Compile Include="Logic\IngredientBL.cs" />
     <Compile Include="Logic\LogicBL.cs" />
     <Compile Include="Logic\LoginBL.cs" />
+    <Compile Include="Logic\PreOrderBL.cs" />
+    <Compile Include="Logic\PreOrderItemBL.cs" />
     <Compile Include="Logic\ProductBL.cs" />
     <Compile Include="Logic\ProviderBL.cs" />
     <Compile Include="Logic\RecipeBL.cs" />
@@ -253,6 +260,12 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="PreOrder.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PreOrderItem.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Product.cs">
       <DependentUpon>Model1.tt</DependentUpon>
