se realiza el  respectivo cambio y se crea la controladora de order

--- a/BackEndComedores/BackEndComedores.csproj
+++ b/BackEndComedores/BackEndComedores.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Controllers\ControladoresPrincipales\DiningRoomController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\DisponibilityController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\IngredientController.cs" />
+    <Compile Include="Controllers\ControladoresPrincipales\OrderController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\PreOrderController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\RecipeController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\SystemUserController.cs" />
