--- a/BackEndComedores/packages.config
+++ b/BackEndComedores/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="3.8.0" targetFramework="net461" />
+  <package id="Accord.Math" version="3.8.0" targetFramework="net461" />
+  <package id="Accord.Statistics" version="3.8.0" targetFramework="net461" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
+  <package id="MathNet.Numerics" version="4.9.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.es" version="5.2.4" targetFramework="net461" />
