--- a/BackEndComedores/BackEndComedores.csproj
+++ b/BackEndComedores/BackEndComedores.csproj
@@ -278,6 +278,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\ProcessModel\DisponibilityProcess.cs" />
     <Compile Include="PreOrder.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -371,7 +372,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Comedor\" />
   </ItemGroup>
   <ItemGroup>
