Se realiza el proceso de distancias entre comedor y proveedores.

--- a/BackEndComedores/Web.config
+++ b/BackEndComedores/Web.config
@@ -13,6 +13,7 @@
     <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:64119" />
     <add key="JWT_ISSUER_TOKEN" value="http://localhost:64119" />
     <add key="JWT_EXPIRE_MINUTES" value="1440" />
+    <add key="KeyGoogle" value="AIzaSyCo56dDPyXcYbHWcQTi5ub5qpHu5GU2Wks" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -81,6 +82,6 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="ProyectoMaestriaEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-K1RILPS;initial catalog=Comedores;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ProyectoMaestriaEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=GONZ111499-12;initial catalog=Comedores;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
