--- a/BackEndComedores/BackEndComedores.csproj
+++ b/BackEndComedores/BackEndComedores.csproj
@@ -76,6 +76,9 @@
     <Reference Include="Microsoft.IdentityModel.Tokens, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.IdentityModel.Tokens.5.6.0\lib\net461\Microsoft.IdentityModel.Tokens.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Solver.Foundation, Version=3.0.2.10889, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Solver.Foundation.3.1.0\lib\Microsoft.Solver.Foundation.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -204,6 +207,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\DiningRoomController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\DisponibilityController.cs" />
+    <Compile Include="Controllers\ControladoresPrincipales\EficienciaController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\IngredientController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\OrderController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\PreOrderController.cs" />
