--- a/BackEndComedores/BackEndComedores.csproj
+++ b/BackEndComedores/BackEndComedores.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Controllers\ControladoresPrincipales\EficienciaController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\IngredientController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\OrderController.cs" />
+    <Compile Include="Controllers\ControladoresPrincipales\OrderItemController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\PreOrderController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\RecipeController.cs" />
     <Compile Include="Controllers\ControladoresPrincipales\SystemUserController.cs" />
@@ -226,6 +227,7 @@
     <Compile Include="DataACCESS\DisponibilityDAL.cs" />
     <Compile Include="DataACCESS\IngredientDAL.cs" />
     <Compile Include="DataACCESS\LoginDAL.cs" />
+    <Compile Include="DataACCESS\OrderItemDAL.cs" />
     <Compile Include="DataACCESS\PreOrderDAL.cs" />
     <Compile Include="DataACCESS\PreOrerItemDAL.cs" />
     <Compile Include="DataACCESS\ProductDAL.cs" />
@@ -261,6 +263,7 @@
     <Compile Include="Logic\IngredientBL.cs" />
     <Compile Include="Logic\LogicBL.cs" />
     <Compile Include="Logic\LoginBL.cs" />
+    <Compile Include="Logic\OrderItemBLL.cs" />
     <Compile Include="Logic\PreOrderBL.cs" />
     <Compile Include="Logic\PreOrderItemBL.cs" />
     <Compile Include="Logic\ProductBL.cs" />
@@ -284,6 +287,12 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\ProcessModel\DisponibilityProcess.cs" />
+    <Compile Include="Order.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OrderItem.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="PreOrder.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
