--- a/BackEndComedores/BackEndComedores.csproj
+++ b/BackEndComedores/BackEndComedores.csproj
@@ -288,6 +288,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\ProcessModel\DisponibilityProcess.cs" />
+    <Compile Include="Models\ProcessModel\ResponseProvider.cs" />
     <Compile Include="Order.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
